# nytw-hackathon

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt
.github/workflows/: preview.yml
docs/: linear-autonomy-scope.md
intern_bot/: __init__.py  agent.py  cli.py  config.py  env.py  heartbeat.py  memory.py  merge_guard.py  perseus.py  preview_server.py  prompts.py
intern_bot/codebase/: __init__.py  prompts.py  tools.py
intern_bot/github/: __init__.py  app_auth.py  open_pr.py  preflight.py  prompts.py  tools.py
intern_bot/linear/: __init__.py  preflight.py  prompts.py  tools.py
intern_bot/slack/: __init__.py  app.py  prompts.py  tools.py
tests/: test_agent.py  test_config.py  test_env.py  test_github_app_auth.py  test_github_open_pr.py  test_github_preflight.py  test_linear_preflight.py  test_memory.py  test_merge_guard.py  test_perseus.py  test_slack_app.py
